# readscore

./: .gitignore  mise.toml  pyproject.toml
docs-site/src/content/docs/: index.mdx
src/readable/resources/nltk_data/tokenizers/punkt_tab/english/: ortho_context.tab.license
src/readable/text/: tokenizer.py
